# AI_solo_coder_task_B_136

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile  api_test.ps1  api_test.py  api_test_2.py  api_test_results_2.json  api_test_results_py.json  api_test_v2.ps1  build2.txt  build3.txt  build_output.txt  cargo_check_output.txt  cargo_check_output2.txt  check_output.txt  full_test.ps1  full_test_out.txt  quick_results.json  quick_test_stdout.txt  regression_test.ps1  run_reg.bat  test11.py  test11_result.json  test11_stdout.txt  test_fem.ps1  test_result.txt
backend/config/: soil_config.json  tower_config.json
backend/src/: alarm_mqtt.rs  alert.rs  config.rs  database.rs  dtu_receiver.rs  era_comparator.rs  fem.rs  fem_executor.rs  foundation_analyzer.rs  ground.rs  handlers.rs  lib.rs  main.rs  metrics.rs  moat_analyzer.rs  models.rs  mqtt_client.rs  routes.rs  soil_analyzer.rs  stability.rs  structural_simulator.rs  structure_comparator.rs  vr_siege_tower.rs
backend/tests/: feature_tests.rs
clickhouse/: init.sql  rollup_ttl.sql
clickhouse/config.d/: server_config.xml
frontend/: Dockerfile  index.html  nginx-gzip.conf  nginx.conf  package-lock.json  package.json  test.html  vite.config.js
frontend/src/: config.js  era_comparator.js  feature_tests.js  foundation_analyzer.js  main.js  siege_tower_3d.js  stability_panel.js  structure_comparator.js  styles.css  tower3d.js  vr_siege_tower.js
mqtt/: mosquitto.conf
prometheus/: prometheus.yml
simulator/: Dockerfile  requirements.txt  sensor_simulator.py
