[package]
name = "siege-tower-backend"
version = "1.0.0"
edition = "2021"
description = "古代临冲吕公车结构仿真与稳定性分析系统后端"
authors = ["Military History Research Team"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = { version = "0.7", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
nalgebra = "0.32"
rand = "0.8"
anyhow = "1.0"
parking_lot = "0.12"
dotenvy = "0.15"
once_cell = "1.19"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
http = "1.0"
futures-core = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
rumqttc = "0.24"
prometheus = { version = "0.13", features = ["process"] }
metrics-exporter-prometheus = "0.15"

[dev-dependencies]
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bin]]
name = "siege-tower-server"
path = "src/main.rs"
